--- a/DMS_Meta.Rmd
+++ b/DMS_Meta.Rmd
@@ -7,10 +7,230 @@ editor_options:
   chunk_output_type: console
 ---
 
-
+# Libraries
 ```{r}
 
-
+library(tidyverse) # data wrangling
+library(janitor) # clean column names
+library(metafor) # compute effect sizes
+library(effectsize)# compute effect sizes
 
 ```
+
+
+# Clean up data
+```{r}
+
+data <- read.csv(file = "2024-0513_review_Formatted.csv", header = TRUE)
+
+data <- clean_names(data)
+
+sapply(data, class)
+
+# Clean up culture column into separate 
+
+df1 <- data %>% separate(culture_of_sample_study_1, 
+                         c("culture_powerdistance", "culture_individualism",
+                           "culture_mtas", "culture_uncertaintyavoidance",
+                           "culture_longtermorientation", "culture_indulgence"), 
+                         ";")
+
+df1$culture_powerdistance<-gsub("PD:","",as.character(df1$culture_powerdistance))
+df1$culture_individualism<-gsub("Individualism:","",as.character(df1$culture_individualism))
+df1$culture_mtas<-gsub("MTAS:","",as.character(df1$culture_mtas))
+df1$culture_uncertaintyavoidance<-gsub("UA:","",as.character(df1$culture_uncertaintyavoidance))
+df1$culture_longtermorientation<-gsub("LTO:","",as.character(df1$culture_longtermorientation))
+df1$culture_indulgence<-gsub("Indulgence:","",as.character(df1$culture_indulgence))
+
+sapply(df1, class)
+
+df1$culture_powerdistance <- as.numeric(df1$culture_powerdistance)
+df1$culture_individualism <- as.numeric(df1$culture_individualism)
+df1$culture_mtas <- as.numeric(df1$culture_mtas)
+df1$culture_uncertaintyavoidance <- as.numeric(df1$culture_uncertaintyavoidance)
+df1$culture_longtermorientation <- as.numeric(df1$culture_longtermorientation)
+df1$culture_indulgence <- as.numeric(df1$culture_indulgence)
+
+# Fix up some names
+
+df1 <- df1 %>% rename(country = country_in_which_the_study_conducted)
+
+df1$country<-gsub("Other:","",as.character(df1$country))
+
+df1 <- df1 %>% rename(topic = topic_of_decision_important_general_unknown_etc_study_1)
+
+df1 <- df1 %>% rename(measure = type_of_avoidant_decision_making_measure_study_1)
+
+df1 <- df1 %>% rename(sample_type = population_description_study_1)
+
+df1 <- df1 %>% rename(analysis = analysis_type_study_1_avoidant_dv)
+
+```
+
+
+# Compute Effect Sizes
+```{r}
+
+#' `compute_es()` creates "effect_sizes_pref.csv", by computing standardized effect sizes using the outcomes 
+#' information (e.g., means, SDs, correlations) in 'clean_study_data_*.csv'.
+#' @param preference A character string to specify for which econ. preference should effect sizes be calculated. 
+#' Can either be 'avoidance' or 'dependence'
+#' @returns A data frame with details of all the studies of the specified econ. preference (e.g., first author, 
+#' year of publication, sample size) along with the standardized effect size and their respective sampling variance
+#' that is saved as a csv file in a designated folder. 
+
+compute_es <- function(preference) {
+  
+  
+# EFFECT SIZES ----------------------------------------------------------
+  
+  # means and SDS (young vs. old)
+  smd_dat <- df1 %>% 
+    filter(age_variable_study_1 %in% c("Categorical (young/older groups")|
+             groups == "Young/older adolescents")
+  
+  
+  # add point-biserial correlation and its variance (Soper's 'exact' equation) 
+    # to dataset for avoidance
+  smd_dat_av <- escalc(measure = "RPB",
+                    m1i = young_adults_avoidance_mean|adolescents_younger_avoidance_mean, 
+                    m2i = young_adults_avoidance_sd|adolescents_younger_avoidance_sd,
+                    sd1i = older_adults_avoidance_mean|adolescents_older_avoidance_mean,
+                    sd2i = older_adults_avoidance_sd|adolescents_older_avoidance_sd,
+                    n1i = number_of_older_adults_categorical_var_study_1,
+                    n2i = number_of_young_adults_categorical_var_study_1,
+                    dat = smd_dat,
+                    vtype = "LS",
+                    replace=FALSE)
+  
+  # add point-biserial correlation and its variance (Soper's 'exact' equation) 
+    # to dataset for dependence
+  smd_dat_dp <- escalc(measure = "RPB",
+                    m1i = young_adults_dependence_mean, 
+                    m2i = young_adults_dependence_sd,
+                    sd1i = older_adults_dependence_mean, 
+                    sd2i = older_adults_dependence_sd,
+                    n1i = number_of_older_adults_categorical_var_study_1,
+                    n2i = number_of_young_adults_categorical_var_study_1,
+                    dat = smd_dat,
+                    vtype = "LS",
+                    replace=FALSE)
+  
+  smd_dat_av <- smd_dat_av %>% 
+    # calculate age difference in decades (mean or midpoint in age range)
+    mutate(dec_diff_av = case_when(!is.na(age_m_young_adults) &!is.na(age_m_older_adults) ~ .1*(age_m_older_adults-age_m_young_adults),
+                                TRUE ~ .1*(((min_age_older+max_age_older)/2) - ((min_age_young+max_age_young)/2))),
+           cor_type = "RPB")
+  
+    smd_dat_dp <- smd_dat_dp %>% 
+    # calculate age difference in decades (mean or midpoint in age range)
+    mutate(dec_diff_dp = case_when(!is.na(age_m_young_adults) &!is.na(age_m_older_adults) ~ .1*(age_m_older_adults-age_m_young_adults),
+                                TRUE ~ .1*(((min_age_older+max_age_older)/2) - ((min_age_young+max_age_young)/2))),
+           cor_type = "RPB")
+  
+   #####################################################_
+  
+  # correlations
+  cor_dat <- df1 %>% 
+    filter(analysis_type_study_1_avoidant_dv == "Correlation") # use correlations from extreme group designs if available
+  
+  # add yi=ri and vi (sampling variances) to dataset for avoidance
+  cor_dat_av <- escalc(measure = 'COR',
+                    ri = avoidance_age_result|age_avoidance_group_1_result|
+                      age_avoidance_group_2_result|female_age_avoidance_result|
+                      male_age_result,
+                    ni = total_number_of_participants_study_1,
+                    vtype = "LS",
+                    data = cor_dat)
+  
+    # add yi=ri and vi (sampling variances) to dataset for dependence
+  cor_dat_dp <- escalc(measure = 'COR',
+                    ri = dependent_age_result|female_age_dependence_result|
+                      male_age_dependence_result, 
+                    ni = total_number_of_participants_study_1,
+                    vtype = "LS",
+                    data = cor_dat)
+  
+  
+  cor_dat_av <-  cor_dat_av %>% 
+    # calculate age difference in decades
+    mutate(cor_type = "COR",
+           study_design = case_when(age_variable_study_1 == "Categorical",
+                                    age_variable_study_1 %in% "Continuous")) %>% 
+    mutate(dec_diff_av =  .1*(max_age - min_age))
+  
+    cor_dat_dp <-  cor_dat_dp %>% 
+    # calculate age difference in decades
+    mutate(cor_type = "COR",
+           study_design = case_when(age_variable_study_1 == "Categorical",
+                                    age_variable_study_1 %in% "Continuous")) %>% 
+    mutate(dec_diff_dp =  .1*(max_age - min_age))
+  
+  
+  
+  # bind avoidance data frames
+  es_av <- bind_rows(smd_dat_av, cor_dat_av) %>% 
+    select(study_id, yi, vi, cor_type, age_variable_study_1, dec_diff) %>% 
+    rename(cor_yi_av = yi,
+           cor_vi_av = vi) %>% 
+    full_join(df1, by = c("study_id", "age_variable_study_1"))  %>% 
+    mutate(author_extract = "Leon",
+           es_id_av = 1:n(),  
+           # number of participants included in the ES calculation
+           n_incl_es_av = case_when(age_variable_study_1 %in% "Continuous" ~ total_number_of_participants_study_1,
+                                 # extreme group comparison included old vs. young differences
+                                 age_variable_study_1!= "Continous" ~ number_of_older_adults_categorical_var_study_1 + number_of_young_adults_categorical_var_study_1))
+  
+  # bind dependence data frames
+  es_dp <- bind_rows(smd_dat_dp, cor_dat_dp) %>% 
+    select(study_id, yi, vi, cor_type, age_variable_study_1, dec_diff) %>% 
+    rename(cor_yi_dp = yi,
+           cor_vi_dp = vi) %>% 
+    full_join(df1, by = c("study_id", "age_variable_study_1"))  %>% 
+    mutate(author_extract = "Leon",
+           es_id_dp = 1:n(),  
+           # number of participants included in the ES calculation
+           n_incl_es_dp = case_when(age_variable_study_1 %in% "Continuous" ~ total_number_of_participants_study_1,
+                                 # extreme group comparison included old vs. young differences
+                                 age_variable_study_1!= "Continous" ~ number_of_older_adults_categorical_var_study_1 + number_of_young_adults_categorical_var_study_1))
+  
+  
+  
+  
+   es_dat <- es %>% 
+      # assign a number to each study label
+      mutate(study_id = cur_group_id()) %>% 
+      select(study_id, study_id_1, year_of_publication, country, measure, analysis,
+             culture_powerdistance, culture_individualism, culture_mtas,
+             culture_uncertaintyavoidance, culture_longtermorientation, culture_longtermorientation,
+             culture_indulgence, topic, sample_type, groups, analysis, total_number_of_participants_study_1,
+             number_of_older_adults_categorical_var_study_1, number_of_young_adults_categorical_var_study_1,
+             total_n_group_1, total_n_group_, n_incl_es_av, n_incl_es_dp, gender_female_value,
+             gender_female_group_1, gender_female_group_2, age_m_young_adults, 
+             age_m_older_adults, age_m_value, age_m_group_1, age_m_group_2,
+             min_age_young, min_age_older, min_age, min_age_group_1, min_age_group_2,
+             max_age_young, max_age_older, max_age, max_age_group_1, max_age_group_2,
+             dec_diff_av, dec_diff_dp, young_adults_dependence_mean, young_adults_avoidance_sd,
+             adolescents_younger_avoidance_mean, adolescents_younger_avoidance_sd,
+             older_adults_avoidance_mean, adolescents_older_avoidance_mean, 
+             older_adults_avoidance_sd, adolescents_older_avoidance_sd, young_adults_dependence_mean,
+             young_adults_dependence_sd, older_adults_dependence_mean, older_adults_dependence_sd,
+             avoidance_age_result, age_avoidance_group_1_result, age_avoidance_group_2_result,
+             female_age_avoidance_result, male_age_result, dependent_age_result, 
+             female_age_dependence_result, male_age_dependence_result, 
+             cor_yi_av, cor_vi_av, cor_yi_dp, cor_vi_dp, cor_type, author_extract)
+}
+             
+             
+             
+             
+  
+  
+  
+```
+
+
+
+
+
 
