--- a/DMS_Meta.Rmd
+++ b/DMS_Meta.Rmd
@@ -73,7 +73,7 @@ df1 <- df1 %>% rename(analysis = analysis_type_study_1_avoidant_dv)
 
 #' `compute_es()` creates "effect_sizes_pref.csv", by computing standardized effect sizes using the outcomes 
 #' information (e.g., means, SDs, correlations) in 'clean_study_data_*.csv'.
-#' @param preference A character string to specify for which econ. preference should effect sizes be calculated. 
+#' @param preferences A character string to specify for which econ. preference should effect sizes be calculated. 
 #' Can either be 'avoidance' or 'dependence'
 #' @returns A data frame with details of all the studies of the specified econ. preference (e.g., first author, 
 #' year of publication, sample size) along with the standardized effect size and their respective sampling variance
@@ -83,55 +83,38 @@ compute_es <- function(preference) {
   
   
 # EFFECT SIZES ----------------------------------------------------------
+  ###avoidance
   
-  # means and SDS (young vs. old)
-  smd_dat <- df1 %>% 
+  if (preference == "avoidance") {
+   # means and SDS (young vs. old)
+  smd_dat_av <- df1 %>% 
     filter(age_variable_study_1 %in% c("Categorical (young/older groups")|
              groups == "Young/older adolescents")
   
-  
-  # add point-biserial correlation and its variance (Soper's 'exact' equation) 
+    # add point-biserial correlation and its variance (Soper's 'exact' equation) 
     # to dataset for avoidance
-  smd_dat_av <- escalc(measure = "RPB",
+    smd_dat_av <- escalc(measure = "RPB",
                     m1i = young_adults_avoidance_mean|adolescents_younger_avoidance_mean, 
                     m2i = young_adults_avoidance_sd|adolescents_younger_avoidance_sd,
                     sd1i = older_adults_avoidance_mean|adolescents_older_avoidance_mean,
                     sd2i = older_adults_avoidance_sd|adolescents_older_avoidance_sd,
                     n1i = number_of_older_adults_categorical_var_study_1,
                     n2i = number_of_young_adults_categorical_var_study_1,
-                    dat = smd_dat,
+                    dat = smd_dat_av,
                     vtype = "LS",
                     replace=FALSE)
-  
-  # add point-biserial correlation and its variance (Soper's 'exact' equation) 
-    # to dataset for dependence
-  smd_dat_dp <- escalc(measure = "RPB",
-                    m1i = young_adults_dependence_mean, 
-                    m2i = young_adults_dependence_sd,
-                    sd1i = older_adults_dependence_mean, 
-                    sd2i = older_adults_dependence_sd,
-                    n1i = number_of_older_adults_categorical_var_study_1,
-                    n2i = number_of_young_adults_categorical_var_study_1,
-                    dat = smd_dat,
-                    vtype = "LS",
-                    replace=FALSE)
-  
-  smd_dat_av <- smd_dat_av %>% 
+    
+    smd_dat_av <- smd_dat_av %>% 
     # calculate age difference in decades (mean or midpoint in age range)
     mutate(dec_diff_av = case_when(!is.na(age_m_young_adults) &!is.na(age_m_older_adults) ~ .1*(age_m_older_adults-age_m_young_adults),
                                 TRUE ~ .1*(((min_age_older+max_age_older)/2) - ((min_age_young+max_age_young)/2))),
            cor_type = "RPB")
-  
-    smd_dat_dp <- smd_dat_dp %>% 
-    # calculate age difference in decades (mean or midpoint in age range)
-    mutate(dec_diff_dp = case_when(!is.na(age_m_young_adults) &!is.na(age_m_older_adults) ~ .1*(age_m_older_adults-age_m_young_adults),
-                                TRUE ~ .1*(((min_age_older+max_age_older)/2) - ((min_age_young+max_age_young)/2))),
-           cor_type = "RPB")
-  
-   #####################################################_
+    
+    
+      #####################################################_
   
   # correlations
-  cor_dat <- df1 %>% 
+     cor_dat_av <- df1 %>% 
     filter(analysis_type_study_1_avoidant_dv == "Correlation") # use correlations from extreme group designs if available
   
   # add yi=ri and vi (sampling variances) to dataset for avoidance
@@ -141,17 +124,8 @@ compute_es <- function(preference) {
                       male_age_result,
                     ni = total_number_of_participants_study_1,
                     vtype = "LS",
-                    data = cor_dat)
-  
-    # add yi=ri and vi (sampling variances) to dataset for dependence
-  cor_dat_dp <- escalc(measure = 'COR',
-                    ri = dependent_age_result|female_age_dependence_result|
-                      male_age_dependence_result, 
-                    ni = total_number_of_participants_study_1,
-                    vtype = "LS",
-                    data = cor_dat)
-  
-  
+                    data = cor_dat_av)
+    
   cor_dat_av <-  cor_dat_av %>% 
     # calculate age difference in decades
     mutate(cor_type = "COR",
@@ -159,16 +133,9 @@ compute_es <- function(preference) {
                                     age_variable_study_1 %in% "Continuous")) %>% 
     mutate(dec_diff_av =  .1*(max_age - min_age))
   
-    cor_dat_dp <-  cor_dat_dp %>% 
-    # calculate age difference in decades
-    mutate(cor_type = "COR",
-           study_design = case_when(age_variable_study_1 == "Categorical",
-                                    age_variable_study_1 %in% "Continuous")) %>% 
-    mutate(dec_diff_dp =  .1*(max_age - min_age))
   
   
-  
-  # bind avoidance data frames
+   # bind avoidance data frames
   es_av <- bind_rows(smd_dat_av, cor_dat_av) %>% 
     select(study_id, yi, vi, cor_type, age_variable_study_1, dec_diff) %>% 
     rename(cor_yi_av = yi,
@@ -180,7 +147,70 @@ compute_es <- function(preference) {
            n_incl_es_av = case_when(age_variable_study_1 %in% "Continuous" ~ total_number_of_participants_study_1,
                                  # extreme group comparison included old vs. young differences
                                  age_variable_study_1!= "Continous" ~ number_of_older_adults_categorical_var_study_1 + number_of_young_adults_categorical_var_study_1))
+  }
   
+  # EFFECT SIZES ----------------------------------------------------------
+  ###dependence
+  
+  if (preference == "dependence") {
+
+  
+    # means and SDS (young vs. old)
+  smd_dat_dp <- df1 %>% 
+    filter(age_variable_study_1 %in% c("Categorical (young/older groups")|
+             groups == "Young/older adolescents")
+  
+  
+  # add point-biserial correlation and its variance (Soper's 'exact' equation) 
+    # to dataset for dependence
+    smd_dat_dp <- escalc(measure = "RPB",
+                    m1i = young_adults_dependence_mean, 
+                    m2i = young_adults_dependence_sd,
+                    sd1i = older_adults_dependence_mean, 
+                    sd2i = older_adults_dependence_sd,
+                    n1i = number_of_older_adults_categorical_var_study_1,
+                    n2i = number_of_young_adults_categorical_var_study_1,
+                    dat = smd_dat_dp,
+                    vtype = "LS",
+                    replace=FALSE)
+  
+  
+  
+    smd_dat_dp <- smd_dat_dp %>% 
+    # calculate age difference in decades (mean or midpoint in age range)
+    mutate(dec_diff_dp = case_when(!is.na(age_m_young_adults) &!is.na(age_m_older_adults) ~ .1*(age_m_older_adults-age_m_young_adults),
+                                TRUE ~ .1*(((min_age_older+max_age_older)/2) - ((min_age_young+max_age_young)/2))),
+           cor_type = "RPB")
+  
+   #####################################################_
+  
+  # correlations
+ 
+  
+   cor_dat_dp <- df1 %>% 
+    filter(analysis_type_study_1_avoidant_dv == "Correlation") # use correlations from extreme group designs if available
+  
+    # add yi=ri and vi (sampling variances) to dataset for dependence
+  cor_dat_dp <- escalc(measure = 'COR',
+                    ri = dependent_age_result|female_age_dependence_result|
+                      male_age_dependence_result, 
+                    ni = total_number_of_participants_study_1,
+                    vtype = "LS",
+                    data = cor_dat_dp)
+  
+  
+  
+  
+    cor_dat_dp <-  cor_dat_dp %>% 
+    # calculate age difference in decades
+    mutate(cor_type = "COR",
+           study_design = case_when(age_variable_study_1 == "Categorical",
+                                    age_variable_study_1 %in% "Continuous")) %>% 
+    mutate(dec_diff_dp =  .1*(max_age - min_age))
+  
+  
+  
+
   # bind dependence data frames
   es_dp <- bind_rows(smd_dat_dp, cor_dat_dp) %>% 
     select(study_id, yi, vi, cor_type, age_variable_study_1, dec_diff) %>% 
@@ -194,7 +224,9 @@ compute_es <- function(preference) {
                                  # extreme group comparison included old vs. young differences
                                  age_variable_study_1!= "Continous" ~ number_of_older_adults_categorical_var_study_1 + number_of_young_adults_categorical_var_study_1))
   
+  }
   
+    # SAVE OUTPUT ------------------------------------------------------------
   
   
    es_dat <- es %>% 
@@ -219,17 +251,29 @@ compute_es <- function(preference) {
              female_age_avoidance_result, male_age_result, dependent_age_result, 
              female_age_dependence_result, male_age_dependence_result, 
              cor_yi_av, cor_vi_av, cor_yi_dp, cor_vi_dp, cor_type, author_extract)
+   
+   write_csv(es_dat, file = "effect_sizes.csv")
+  
+  print("effect_sizes_%s.csv created successfully! Saved in:   Home/PhD/Meta_analysis/Meta_Analyses") 
 }
              
              
              
-             
-  
-  
-  
 ```
 
 
+```{r}
+
+preferences <- c("avoidance", "dependence")
+
+
+for (pref in preferences) {
+  
+  compute_es(preference = pref)
+}
+
+
+```
 
 
 
